tests/baselines/reference/privateNameAndPropertySignature.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(2,5): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(3,5): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(7,5): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(8,5): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(12,5): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(14,9): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(15,9): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(17,5): error TS18016: Private identifiers are not allowed outside class bodies.
tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts(20,28): error TS18016: Private identifiers are not allowed outside class bodies.


==== tests/cases/conformance/classes/members/privateNames/privateNameAndPropertySignature.ts (9 errors) ====
    type A = {
        #foo: string;
        ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
        #bar(): string;
        ~~~~~~~~~~~~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    }
    
    interface B {
        #foo: string;
        ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
        #bar(): string;
        ~~~~~~~~~~~~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    }
    
    declare const x: {
        #foo: number;
        ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
        bar: {
            #baz: string;
            ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
            #taz(): string;
            ~~~~~~~~~~~~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
        }
        #baz(): string;
        ~~~~~~~~~~~~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    };
    
    declare const y: [{ qux: { #quux: 3 } }];
                               ~~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    